하아... 이미지 조정하기

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.css"
     />
-    <!-- JS -->
-    <script src="js/script.js" defer></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script>
+    <!-- JS -->
+    <script src="js/script.js" defer></script>
+    <script src="js/sticky.js" defer></script>
     <!--  -->
   </head>
   <body>
@@ -37,11 +38,7 @@
               <li><a href="#">잘난체</a></li>
               <li><a href="recruit.html">채용</a></li>
               <li>
-                <a
-                  href="https://www.yeogi.com/?utm_source=Corporate+Website&utm_medium=top"
-                >
-                  <span>여기어때</span></a
-                >
+                <a href="#"><a>여기어때</a></a>
               </li>
             </ul>
             <div class="lang-wrap">
@@ -101,56 +98,56 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img2.jpg" alt="tal-img2" />
-                  <p>항공</p>
+                  <p>레저ㆍ티켓</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img3.jpg" alt="tal-img3" />
-                  <p>항공</p>
+                  <p>해외 숙소</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img4.jpg" alt="tal-img4" />
-                  <p>항공</p>
+                  <p>렌터카</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img5.jpg" alt="tal-img5" />
-                  <p>항공</p>
+                  <p>리조트</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img6.jpg" alt="tal-img6" />
-                  <p>항공</p>
+                  <p>모텔</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img7.jpg" alt="tal-img7" />
-                  <p>항공</p>
+                  <p>호텔</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img8.jpg" alt="tal-img8" />
-                  <p>항공</p>
+                  <p>공간대여</p>
                 </div>
               </div>
               <!--  -->
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img9.jpg" alt="tal-img9" />
-                  <p>항공</p>
+                  <p>리조트</p>
                 </div>
               </div>
             </div>
@@ -227,20 +224,18 @@
           <img src="assets/icons/spring-icon.png" alt="" />
         </div>
         <!--  -->
-        <div class="servic-title">
-          <div class="title">
-            <h2>
-              ALWAYS <br />
-              BETTER <br />
-              SERVEICE.
-            </h2>
-          </div>
-          <div class="sub-title">
-            <p>
-              보다 신뢰할 수 있는<br />
-              서비스를 만듭니다.
-            </p>
-          </div>
+        <div class="back-title">
+          <h2>
+            ALWAYS <br />
+            BETTER <br />
+            SERVEICE.
+          </h2>
+        </div>
+        <div class="sub-title">
+          <p>
+            보다 신뢰할 수 있는<br />
+            서비스를 만듭니다.
+          </p>
         </div>
         <!--  -->
         <div class="inner">
