--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -54,10 +54,9 @@
           <!-- 모바일 메뉴 -->
           <!-- <div class="utils">
             <a href="#" class="mobile-menu">
-              <img src="#" alt="모바일 메뉴" />
+              <img src="assets/icons/mb-btn.png" alt="모바일 메뉴" />
             </a>
-          </div>  
-          -->
+          </div> -->
         </div>
       </header>
       <!-- hero -->
@@ -91,6 +90,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img1.jpg" alt="tal-img1" />
+                </div>
+                <div class="slide-title">
                   <p>항공</p>
                 </div>
               </div>
@@ -98,6 +99,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img2.jpg" alt="tal-img2" />
+                </div>
+                <div class="slide-title">
                   <p>레저ㆍ티켓</p>
                 </div>
               </div>
@@ -105,6 +108,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img3.jpg" alt="tal-img3" />
+                </div>
+                <div class="slide-title">
                   <p>해외 숙소</p>
                 </div>
               </div>
@@ -112,6 +117,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img4.jpg" alt="tal-img4" />
+                </div>
+                <div class="slide-title">
                   <p>렌터카</p>
                 </div>
               </div>
@@ -119,6 +126,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img5.jpg" alt="tal-img5" />
+                </div>
+                <div class="slide-title">
                   <p>리조트</p>
                 </div>
               </div>
@@ -126,6 +135,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img6.jpg" alt="tal-img6" />
+                </div>
+                <div class="slide-title">
                   <p>모텔</p>
                 </div>
               </div>
@@ -133,6 +144,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img7.jpg" alt="tal-img7" />
+                </div>
+                <div class="slide-title">
                   <p>호텔</p>
                 </div>
               </div>
@@ -140,6 +153,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img8.jpg" alt="tal-img8" />
+                </div>
+                <div class="slide-title">
                   <p>공간대여</p>
                 </div>
               </div>
@@ -147,6 +162,8 @@
               <div class="swiper-slide">
                 <div class="slide-info">
                   <img src="assets/images/tal-img9.jpg" alt="tal-img9" />
+                </div>
+                <div class="slide-title">
                   <p>리조트</p>
                 </div>
               </div>
@@ -171,18 +188,22 @@
       <!-- grow -->
       <section class="grow-section">
         <!--  -->
-        <div class="black-sticker-big fade-up">
-          <img src="assets/images/black-sticker.png" alt="black-sticker-big" />
-        </div>
-        <div class="black-sticker-small fade-up">
-          <img
-            src="assets/images/black-sticker.png"
-            alt="black-sticker-small"
-          />
-        </div>
+
         <!--  -->
         <div class="inner">
           <div class="grow-title fade-up">
+            <div class="black-sticker-big">
+              <img
+                src="assets/images/black-sticker.png"
+                alt="black-sticker-big"
+              />
+            </div>
+            <div class="black-sticker-small">
+              <img
+                src="assets/images/black-sticker.png"
+                alt="black-sticker-small"
+              />
+            </div>
             <div class="title">
               <h2>
                 여기 어때는 오늘도 <br />
@@ -194,16 +215,16 @@
             </div>
             <div class="sub-title">
               <div class="cumulative">
-                <h5>누적 다운로드</h5>
-                <p>4,000만+</p>
+                <h2>4,000만+</h2>
+                <p>누적 다운로드</p>
               </div>
               <div class="monthly">
-                <h5>월간 활성 사용자</h5>
-                <p>420만+</p>
+                <h2>420만+</h2>
+                <p>월간 활성 사용자</p>
               </div>
               <div class="amount">
-                <h5>누적 거래액</h5>
-                <p>약 6조원</p>
+                <h2>약 6조원</h2>
+                <p>누적 거래액</p>
               </div>
             </div>
           </div>
@@ -223,14 +244,7 @@
         <div class="spring-first">
           <img src="assets/icons/spring-icon.png" alt="" />
         </div>
-        <!--  -->
-        <div class="back-title">
-          <h2>
-            ALWAYS <br />
-            BETTER <br />
-            SERVEICE.
-          </h2>
-        </div>
+
         <div class="sub-title">
           <p>
             보다 신뢰할 수 있는<br />
@@ -239,31 +253,76 @@
         </div>
         <!--  -->
         <div class="inner">
+          <!--  -->
+          <div class="back-title">
+            <h2>
+              ALWAYS <br />
+              BETTER <br />
+              SERVEICE.
+            </h2>
+          </div>
+          <!--  -->
           <div class="service-wrap">
             <!--  -->
-            <div class="service-info">
+            <div class="service-info-vip">
               <div class="info-description">
                 <div class="info-title-left">
                   <h3>VIP CS 센터 운영</h3>
                 </div>
                 <div class="info-caption-left">
                   <p>
-                    재방문을 고객을 위한 VIP CS센터를 운영하고 있어요. <br />
+                    재방문 고객을 위한 VIP CS센터를 운영하고 있어요. <br />
                     이용 중 어려움이 있다면 가장 먼저 <br />
                     응대하여 문제를 신속하게 해결해 드려요.
                   </p>
                 </div>
               </div>
               <div class="service-img">
-                <img src="assets/images/service-1.png" alt="service-img1" />
+                <img src="assets/images/service-2.png" alt="service-img2" />
               </div>
             </div>
             <!--  -->
-            <div class="side-bar"></div>
-            <!--  -->
-            <div class="service-info">
+            <div class="service-info-premium">
               <div class="service-img">
-                <img src="assets/images/service-2.png" alt="service-img2" />
+                <img src="assets/images/service-3.png" alt="service-img3" />
+              </div>
+              <div class="info-description">
+                <div class="info-title-right">
+                  <h3>프리미엄 숙소 컬렉션 제공</h3>
+                </div>
+                <div class="info-caption-right">
+                  <p>
+                    콘텐츠 에디터가 전국의 프리미엄 숙소를 직접 답사하면서
+                    <br />
+                    직접 답사하면서180개가 넘는 콘텐츠를 제작했어요.프리미엄
+                    <br />
+                    숙소만의 매력과 장점을 소개한 에디터 노트를 제공해드려요.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!--  -->
+            <div class="service-info-real">
+              <div class="info-description">
+                <div class="info-title-left">
+                  <h3>600만 개 이상의 리얼 리뷰 제공</h3>
+                </div>
+                <div class="info-caption-left">
+                  <p>
+                    600만 개가 넘는 고객 리뷰를 제공하고 있어요. <br />
+                    클린 정책을 기반으로 리뷰 커뮤니티를 운영하고 있어 <br />
+                    신뢰할 수 있는 리뷰를 확인할 수 있어요.
+                  </p>
+                </div>
+              </div>
+              <div class="service-img">
+                <img src="assets/images/service-4.png" alt="service-img4" />
+              </div>
+            </div>
+            <!--  -->
+            <div class="service-info-relax">
+              <div class="service-img">
+                <img src="assets/images/service-1.png" alt="service-img1" />
               </div>
               <div class="info-description">
                 <div class="info-title-right">
@@ -271,55 +330,13 @@
                 </div>
                 <div class="info-caption-right">
                   <p>
-                    숙소 사정으로 예약이 취소되더라도 걱정하지 마세요. <br />
-                    안심 예약제가 적용된 숙소라면 안심 예약 전담팀에서 <br />
+                    숙소 사정으로 예약이 취소되더라도 걱정하지 마세요 <br />
+                    안심 예약제가 적용된 숙소라면 안심 예약 전담팀에서<br />
                     더 나은 숙소를 직접 찾아 안내해 드려요.
                   </p>
                 </div>
               </div>
             </div>
-            <!--  -->
-            <div class="side-bar"></div>
-            <!--  -->
-            <div class="service-info">
-              <div class="info-description">
-                <div class="info-title-left">
-                  <h3>프리미엄 숙소 컬렉션 제공</h3>
-                </div>
-                <div class="info-caption-left">
-                  <p>
-                    콘텐츠 에디터가 전국의 프리미엄 숙소를 <br />
-                    직접 답사하면서180개가 넘는 콘텐츠를 제작했어요. <br />
-                    프리미엄 숙소만의 매력과 장점을 소개한 <br />
-                    에디터 노트를 제공해드려요.
-                  </p>
-                </div>
-              </div>
-              <div class="service-img">
-                <img src="assets/images/service-3.png" alt="service-img3" />
-              </div>
-            </div>
-            <!--  -->
-            <div class="side-bar"></div>
-            <!--  -->
-            <div class="service-info">
-              <div class="service-img">
-                <img src="assets/images/service-4.png" alt="service-img4" />
-              </div>
-              <div class="info-description">
-                <div class="info-title-right">
-                  <h3>600만 개 이상의 리얼 리뷰 제공</h3>
-                </div>
-                <div class="info-caption-right">
-                  <p>
-                    숙소 사정으로 예약이 취소되더라도 걱정하지 마세요. <br />
-                    안심 예약제가 적용된 숙소라면 안심 예약 전담팀에서 <br />
-                    더 나은 숙소를 직접 찾아 안내해 드려요.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <!--  -->
           </div>
           <!--  -->
           <div class="wrap-foot">
@@ -337,7 +354,6 @@
         <div class="spring-second">
           <img src="assets/icons/spring-icon.png" alt="" />
         </div>
-
         <!--  -->
         <div class="spring-third">
           <img src="assets/icons/spring-icon.png" alt="" />
@@ -352,9 +368,15 @@
         <div class="inner">
           <div class="partnership-title">
             <div class="title">
+              <div class="black-sticker">
+                <img
+                  src="assets/images/black-sticker.png"
+                  alt="black-sticker"
+                />
+              </div>
               <h3>
-                BUSINESS <br />
-                PARTNERSHIP
+                Business <br />
+                Partnership
               </h3>
             </div>
             <div class="sub-title">
@@ -364,6 +386,18 @@
           <!--  -->
           <div class="partnership-list">
             <div class="partnership-main">
+              <div class="spring-sticker">
+                <img
+                  src="assets/images/spring-sticker.png"
+                  alt="spring-sticker"
+                />
+              </div>
+              <div class="arrow-sticker">
+                <img
+                  src="assets/images/arrow-sticker.png"
+                  alt="arrow-sticker"
+                />
+              </div>
               <a href="#">
                 <div class="partnership-mkt">
                   <div class="partnership-wrap">
@@ -395,6 +429,9 @@
             </div>
             <div class="partnership-sub">
               <div class="partnership-top">
+                <div class="eye-sticker">
+                  <img src="assets/images/eye-sticker-reverse.png" alt="eye" />
+                </div>
                 <a href="#">
                   <div class="partnership-lst">
                     <div class="partnership-wrap">
@@ -425,7 +462,7 @@
                 <a href="#">
                   <div class="partnership-bus">
                     <div class="partnership-wrap">
-                      <div class="wrap-title">마케팅/사업제휴</div>
+                      <div class="wrap-title">여기어때 비즈니스</div>
                       <div class="wrap-sub-title">mkt@gccompany.co.kr</div>
                     </div>
                   </div>
@@ -433,18 +470,6 @@
               </div>
             </div>
           </div>
-        </div>
-        <div class="black-sticker">
-          <img src="assets/images/black-sticker.png" alt="black-sticker" />
-        </div>
-        <div class="spring-sticker">
-          <img src="assets/images/spring-sticker.png" alt="spring-sticker" />
-        </div>
-        <div class="arrow-sticker">
-          <img src="assets/images/arrow-sticker.png" alt="arrow-sticker" />
-        </div>
-        <div class="eye-sticker">
-          <img src="assets/images/eye-sticker-reverse.png" alt="eye" />
         </div>
       </section>
       <!-- carousel -->
@@ -575,10 +600,17 @@
             <div class="footer-middle">
               <p>(주)여기어때컴퍼니 대표이사: 정명훈</p>
               <p>주소 : 서울특별시 강남구 봉은사로 479, 479타워 11층</p>
-              <p>
-                사업자등록번호 : 742-86-00224 l 통신판매번호 :
-                2017-서울강남-01779 l 관광사업자 등록번호 : 제 1026-24호
-              </p>
+              <div class="middle-info">
+                <p>
+                  사업자등록번호 : 742-86-00224
+
+                  <br class="mobile-br" />
+                  통신판매번호 : 2017-서울강남-01779
+
+                  <br class="mobile-br" />
+                  관광사업자 등록번호 : 제 1026-24호
+                </p>
+              </div>
             </div>
             <div class="footer-bottom">
               <div class="personal">
