--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
               <li><a href="#">ESG</a></li>
               <li><a href="#">잘난체</a></li>
               <li><a href="recruit.html">채용</a></li>
-              <li>
-                <a href="#"><a>여기어때</a></a>
-              </li>
+              <li><a href="#">여기어때</a></li>
             </ul>
             <div class="lang-wrap">
               <div class="lang-icon">
@@ -52,27 +50,30 @@
           </nav>
           <!-- 수정 해야 함 -->
           <!-- 모바일 메뉴 -->
-          <!-- <div class="utils">
+          <div class="utils">
             <a href="#" class="mobile-menu">
               <img src="assets/icons/mb-btn.png" alt="모바일 메뉴" />
             </a>
-          </div> -->
+          </div>
         </div>
       </header>
       <!-- hero -->
       <section class="hero-section">
         <div class="hero-media">
-          <img src="assets/images/hero-img-after.png" alt="hero-img" />
+          <video
+            src="assets/media/hero-media.mp4"
+            alt="hero-media"
+            autoplay
+            muted
+            loop
+            playsinline
+          />
         </div>
       </section>
       <!-- tal -->
       <section class="tal-section">
         <div class="back-title">
-          <h2>
-            PLAN.<br />
-            BOOK.<br />
-            ENJOY.
-          </h2>
+          <img src="assets/images/PLAN. BOOK. ENJOY.png" alt="back-title" />
         </div>
         <div class="inner">
           <div class="tal-title">
@@ -188,8 +189,6 @@
       <!-- grow -->
       <section class="grow-section">
         <!--  -->
-
-        <!--  -->
         <div class="inner">
           <div class="grow-title fade-up">
             <div class="black-sticker-big">
@@ -230,7 +229,12 @@
           </div>
           <!--  -->
           <div class="grow-media">
-            <img src="assets/images/hero-img-after.png" alt="대체" />
+            <iframe
+              src="https://www.youtube.com/embed/RGq4TWmFonA?autoplay=1&mute=1&loop=1&playlist=RGq4TWmFonA&controls=0&playsinline=1"
+              frameborder="0"
+              allow="autoplay; fullscreen"
+              allowfullscreen
+            ></iframe>
           </div>
           <!--  -->
           <!-- <div class="grow-bot-title">
@@ -244,23 +248,20 @@
         <div class="spring-first">
           <img src="assets/icons/spring-icon.png" alt="" />
         </div>
-
+        <div class="back-title">
+          <img
+            src="assets/images/ALWAYS BETTER SERVICE..png"
+            alt="back-title"
+          />
+        </div>
+        <!--  -->
         <div class="sub-title">
           <p>
             보다 신뢰할 수 있는<br />
             서비스를 만듭니다.
           </p>
         </div>
-        <!--  -->
         <div class="inner">
-          <!--  -->
-          <div class="back-title">
-            <h2>
-              ALWAYS <br />
-              BETTER <br />
-              SERVEICE.
-            </h2>
-          </div>
           <!--  -->
           <div class="service-wrap">
             <!--  -->
@@ -271,8 +272,10 @@
                 </div>
                 <div class="info-caption-left">
                   <p>
-                    재방문 고객을 위한 VIP CS센터를 운영하고 있어요. <br />
-                    이용 중 어려움이 있다면 가장 먼저 <br />
+                    재방문 고객을 위한 <br class="tb-mb-br" />
+                    VIP CS센터를 운영하고 있어요.
+                    <br class="pc-br" />
+                    이용 중 어려움이 있다면 가장 먼저 <br class="pc-br" />
                     응대하여 문제를 신속하게 해결해 드려요.
                   </p>
                 </div>
@@ -292,11 +295,14 @@
                 </div>
                 <div class="info-caption-right">
                   <p>
-                    콘텐츠 에디터가 전국의 프리미엄 숙소를 직접 답사하면서
-                    <br />
-                    직접 답사하면서180개가 넘는 콘텐츠를 제작했어요.프리미엄
-                    <br />
-                    숙소만의 매력과 장점을 소개한 에디터 노트를 제공해드려요.
+                    콘텐츠 에디터가 전국의<br class="tb-mb-br" />
+                    프리미엄 숙소를 직접 답사하면서
+                    <br class="pc-br" />
+                    180개가 넘는 콘텐츠를 제작했어요.<br
+                      class="tb-mb-br"
+                    />프리미엄 숙소만의 <br class="pc-tmb-br" />매력과 장점을
+                    소개한<br class="tb-mb-br" />
+                    에디터 노트를 제공해드려요.
                   </p>
                 </div>
               </div>
@@ -305,13 +311,20 @@
             <div class="service-info-real">
               <div class="info-description">
                 <div class="info-title-left">
-                  <h3>600만 개 이상의 리얼 리뷰 제공</h3>
+                  <h3>
+                    600만 개 이상의 <br class="mb-br" />
+                    리얼 리뷰 제공
+                  </h3>
                 </div>
                 <div class="info-caption-left">
                   <p>
-                    600만 개가 넘는 고객 리뷰를 제공하고 있어요. <br />
-                    클린 정책을 기반으로 리뷰 커뮤니티를 운영하고 있어 <br />
-                    신뢰할 수 있는 리뷰를 확인할 수 있어요.
+                    600만 개가 넘는 고객 <br class="tb-mb-br" />리뷰를 제공하고
+                    있어요.
+                    <br class="pc-br" />
+                    클린 정책을 기반으로 리뷰 커뮤니티를<br class="tb-mb-br" />
+                    운영하고 있어<br class="pc-tb-mb-br" />
+                    신뢰할 수 있는 <br class="mb-real-br" />리뷰를 확인할 수
+                    있어요.
                   </p>
                 </div>
               </div>
@@ -320,7 +333,7 @@
               </div>
             </div>
             <!--  -->
-            <div class="service-info-relax">
+            <!-- <div class="service-info-relax">
               <div class="service-img">
                 <img src="assets/images/service-1.png" alt="service-img1" />
               </div>
@@ -336,19 +349,9 @@
                   </p>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <!--  -->
-          <div class="wrap-foot">
-            <div class="wrap-foot-top">
-              <div class="top-Rectangle-white"></div>
-              <div class="top-Rectangle-linear"></div>
-            </div>
-            <div class="wrap-foot-bot">
-              <div class="bot-Rectangle-linear"></div>
-              <div class="bot-Rectangle-white"></div>
-            </div>
-          </div>
         </div>
         <!--  -->
         <div class="spring-second">
@@ -358,9 +361,9 @@
         <div class="spring-third">
           <img src="assets/icons/spring-icon.png" alt="" />
         </div>
-        <div class="spring-fourth">
+        <!-- <div class="spring-fourth">
           <img src="assets/icons/spring-icon.png" alt="" />
-        </div>
+        </div> -->
       </section>
       <!-- partnership -->
       <section class="partnership-section">
@@ -392,12 +395,6 @@
                   alt="spring-sticker"
                 />
               </div>
-              <div class="arrow-sticker">
-                <img
-                  src="assets/images/arrow-sticker.png"
-                  alt="arrow-sticker"
-                />
-              </div>
               <a href="#">
                 <div class="partnership-mkt">
                   <div class="partnership-wrap">
@@ -419,7 +416,10 @@
               <a href="#">
                 <div class="partnership-pen">
                   <div class="partnership-wrap">
-                    <div class="wrap-title">팬션/캠핑/글램핑/게스트하우스</div>
+                    <div class="wrap-title">
+                      팬션/캠핑/글램핑/<br />
+                      게스트하우스
+                    </div>
                     <div class="wrap-sub-title">
                       pension_sales@gccompany.co.kr
                     </div>
@@ -444,6 +444,12 @@
                 </a>
               </div>
               <div class="partnership-bot">
+                <div class="arrow-sticker">
+                  <img
+                    src="assets/images/arrow-sticker.png"
+                    alt="arrow-sticker"
+                  />
+                </div>
                 <a href="#">
                   <div class="partnership-hnb">
                     <div class="partnership-wrap">
@@ -503,7 +509,9 @@
             <!--  -->
             <div class="btn">
               <a href="#" class="team"><p>팀 문화 바로가기</p></a>
-              <a href="sub.html" class="hiring"><p>채용 공고 바로가기</p></a>
+              <a href="recruit.html" class="hiring"
+                ><p>채용 공고 바로가기</p></a
+              >
             </div>
           </div>
         </div>
@@ -594,7 +602,7 @@
                 <a href="#">잘난체 폰트</a>
               </li>
               <li>
-                <a href="sub.html">채용 사이트</a>
+                <a href="recruit.html">채용 사이트</a>
               </li>
             </ul>
             <div class="footer-middle">
